@@ -26,7 +26,6 @@ import java.io.PrintStream;
 import java.text.NumberFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
@@ -64,6 +63,20 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 		return factory().newInstance();
 	}
 
+	@Test @Override
+	public void equals() { }
+	@Test @Override
+	public void notEquals() { }
+	@Test @Override
+	public void notEqualsNull() { }
+	@Test @Override
+	public void notEqualsStringType() { }
+	@Test @Override
+	public void notEqualsClassType() { }
+	@Test @Override
+	public void hashCodeMethod() { }
+
+
 	@Test(expectedExceptions = IllegalArgumentException.class)
 	public void selectNegativeCountArgument() {
 		final Factory<Genotype<DoubleGene>> gtf =
@@ -71,7 +84,8 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 
 		final MSeq<Phenotype<DoubleGene, Double>> population = MSeq.ofLength(2);
 		for (int i = 0, n = 2; i < n; ++i) {
-			population.set(i, Phenotype.of(gtf.newInstance(), 12, TestUtils.FF));
+			final Genotype<DoubleGene> gt = gtf.newInstance();
+			population.set(i, Phenotype.of(gt, 12, gt.gene().doubleValue()));
 		}
 
 		selector().select(population.toISeq(), -1, Optimize.MAXIMUM);
@@ -89,7 +103,8 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 
 		final MSeq<Phenotype<DoubleGene, Double>> population = MSeq.ofLength(2);
 		for (int i = 0, n = 2; i < n; ++i) {
-			population.set(i, Phenotype.of(gtf.newInstance(), 12, TestUtils.FF));
+			final Genotype<DoubleGene> gt = gtf.newInstance();
+			population.set(i, Phenotype.of(gt, 12, gt.gene().doubleValue()));
 		}
 
 		selector().select(population.toISeq(), 1, null);
@@ -102,10 +117,12 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 		final Optimize opt
 	) {
 		final Function<Genotype<DoubleGene>, Double> ff =
-			g -> g.getGene().getAllele();
+			g -> g.gene().allele();
 
-		final Factory<Phenotype<DoubleGene, Double>> ptf = () ->
-			Phenotype.of(Genotype.of(DoubleChromosome.of(0.0, 100.0)), 1, ff);
+		final Factory<Phenotype<DoubleGene, Double>> ptf = () -> {
+			final Genotype<DoubleGene> gt = Genotype.of(DoubleChromosome.of(0.0, 100.0));
+			return Phenotype.of(gt, 1, gt.gene().doubleValue());
+		};
 
 		using(new LCG64ShiftRandom(543455), r -> {
 			final ISeq<Phenotype<DoubleGene, Double>> population = IntStream.range(0, size)
@@ -118,13 +135,13 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 				final double monteCarloSelectionSum =
 					new MonteCarloSelector<DoubleGene, Double>()
 						.select(population, count, opt).stream()
-						.mapToDouble(Phenotype::getFitness)
+						.mapToDouble(Phenotype::fitness)
 						.sum();
 
 				final double selectionSum =
 					selector
 						.select(population, count, opt).stream()
-						.mapToDouble(Phenotype::getFitness)
+						.mapToDouble(Phenotype::fitness)
 						.sum();
 
 				if (opt == Optimize.MAXIMUM) {
@@ -155,10 +172,12 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 	@Test(dataProvider = "selectParameters")
 	public void select(final Integer size, final Integer count, final Optimize opt) {
 		final Function<Genotype<DoubleGene>, Double> ff =
-			gt -> gt.getGene().getAllele();
+			gt -> gt.gene().allele();
 
-		final Factory<Phenotype<DoubleGene, Double>> ptf = () ->
-			Phenotype.of(Genotype.of(DoubleChromosome.of(0.0, 1_000.0)), 1, ff);
+		final Factory<Phenotype<DoubleGene, Double>> ptf = () -> {
+			final Genotype<DoubleGene> gt = Genotype.of(DoubleChromosome.of(0.0, 1_000.0));
+			return Phenotype.of(gt, 1, gt.gene().doubleValue());
+		};
 
 		final ISeq<Phenotype<DoubleGene, Double>> population = IntStream.range(0, size)
 			.mapToObj(i -> ptf.newInstance())
@@ -183,8 +202,8 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 
 	@DataProvider(name = "selectParameters")
 	public Object[][] selectParameters() {
-		final List<Integer> sizes = Arrays.asList(0, 1, 2, 3, 5, 11, 50, 100, 10_000);
-		final List<Integer> counts = Arrays.asList(0, 1, 2, 3, 5, 11, 50, 100, 10_000);
+		final List<Integer> sizes = List.of(0, 1, 2, 3, 5, 11, 50, 100, 10_000);
+		final List<Integer> counts = List.of(0, 1, 2, 3, 5, 11, 50, 100, 10_000);
 
 		final List<Object[]> result = new ArrayList<>();
 		for (Integer size : sizes) {
@@ -280,10 +299,12 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 		final int loops
 	) {
 		final Function<Genotype<DoubleGene>, Double> ff =
-			gt -> gt.getGene().getAllele();
+			gt -> gt.gene().allele();
 
-		final Factory<Phenotype<DoubleGene, Double>> ptf = () ->
-			Phenotype.of(Genotype.of(DoubleChromosome.of(MIN, MAX)), 1, ff);
+		final Factory<Phenotype<DoubleGene, Double>> ptf = () -> {
+			final Genotype<DoubleGene> gt = Genotype.of(DoubleChromosome.of(MIN, MAX));
+			return Phenotype.of(gt, 1, gt.gene().doubleValue());
+		};
 
 		return IntStream.range(0, loops).parallel().mapToObj(j -> {
 			final Histogram<Double> hist = Histogram.ofDouble(MIN, MAX, CLASS_COUNT);
@@ -295,8 +316,8 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 
 			final int selectionCount = (int)(populationCount/SELECTION_FRACTION);
 			selector.select(population, selectionCount, opt).stream()
-				.map(pt -> pt.getGenotype().getGene().getAllele())
-				.forEach(hist::accept);
+				.map(pt -> pt.genotype().gene().allele())
+				.forEach(hist);
 
 			return hist;
 		}).collect(Histogram.toDoubleHistogram(MIN, MAX, CLASS_COUNT));
