@@ -19,7 +19,7 @@
  */
 package io.jenetics.util;
 
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Random;
@@ -28,7 +28,7 @@ import java.util.function.Supplier;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
-import io.jenetics.internal.math.random;
+import io.jenetics.internal.math.Randoms;
 
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmail.com">Franz Wilhelmstötter</a>
@@ -44,7 +44,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test
 	public void asList() {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		final MSeq<Integer> seq = newSeq(1000);
@@ -96,8 +96,8 @@ public abstract class MSeqTestBase extends SeqTestBase {
 		seq.shuffle(new Random(23));
 		Assert.assertFalse(seq.isSorted());
 
-		seq.sort((a, b) -> b.compareTo(a));
-		Assert.assertTrue(seq.isSorted((a, b) -> b.compareTo(a)));
+		seq.sort(Comparator.reverseOrder());
+		Assert.assertTrue(seq.isSorted(Comparator.reverseOrder()));
 		Assert.assertTrue(seq.reverse().isSorted());
 	}
 
@@ -123,7 +123,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void fill(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		seq.fill(RandomInt(random));
@@ -136,7 +136,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void set(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		for (int i = 0; i < seq.length(); ++i) {
@@ -151,7 +151,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void setAll(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		final Integer v = random.nextInt();
@@ -166,7 +166,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void setAllArray(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		final Integer[] array = new Integer[seq.length()];
@@ -183,14 +183,14 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void setAllIterable(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		final Integer[] array = new Integer[seq.length()];
 		for (int i = 0; i < array.length; ++i) {
 			array[i] = random.nextInt();
 		}
-		seq.setAll(Arrays.asList(array));
+		seq.setAll(List.of(array));
 
 		random.setSeed(seed);
 		for (int i = 0; i < seq.length(); ++i) {
@@ -200,14 +200,14 @@ public abstract class MSeqTestBase extends SeqTestBase {
 
 	@Test(dataProvider = "sequences")
 	public void setAllIterator(final MSeq<Integer> seq) {
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 
 		final Integer[] array = new Integer[seq.length()];
 		for (int i = 0; i < array.length; ++i) {
 			array[i] = random.nextInt();
 		}
-		seq.setAll(Arrays.asList(array).iterator());
+		seq.setAll(List.of(array).iterator());
 
 		random.setSeed(seed);
 		for (int i = 0; i < seq.length(); ++i) {
@@ -238,7 +238,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 	@Test(dataProvider = "sequences")
 	public void swapIntIntMSeqInt(final MSeq<Integer> seq) {
 		for (int start = 0; start < seq.length() - 3; ++start) {
-			final long seed = random.seed();
+			final long seed = Randoms.seed();
 			final Random random = new Random(seed);
 			final MSeq<Integer> other = newSeq(seq.length());
 			final MSeq<Integer> otherCopy = newSeq(seq.length());
@@ -267,7 +267,7 @@ public abstract class MSeqTestBase extends SeqTestBase {
 		final ISeq<Integer> iseq = seq.toISeq();
 		final Integer[] copy = seq.toArray(new Integer[0]);
 
-		final long seed = random.seed();
+		final long seed = Randoms.seed();
 		final Random random = new Random(seed);
 		for (int i = 0; i < seq.length(); ++i) {
 			seq.set(i, random.nextInt());
